--- a/app/css/all/footer.css
+++ b/app/css/all/footer.css
@@ -1,8 +1,8 @@
 .footer {
-  min-width: 990px;
+  min-width: 1000px;
   margin-top: -59px;
   height: 59px;
-  background: #de5b4e;
+  background: #ea695d;
   box-sizing: border-box;
   padding-top: 20px;
   font-family: "TrebuchetMS";
