--- a/app/scss/fonts.scss
+++ b/app/scss/fonts.scss
@@ -2,6 +2,7 @@
 
 @font-face {
   font-family: 'TrebuchetMS';
+  src:  url('../fonts/TrebuchetMS.eot');
   src:  url('../fonts/TrebuchetMS.eot?#iefix') format('embedded-opentype'),
   		url('../fonts/TrebuchetMS.woff') format('woff'),
   		url('../fonts/TrebuchetMS.ttf')  format('truetype'),
@@ -11,6 +12,7 @@
 }
 @font-face {
   font-family: 'GillSans-SemiBold';
+  src:  url('../fonts/GillSans-SemiBold.eot');
   src:  url('../fonts/GillSans-SemiBold.eot?#iefix') format('embedded-opentype'),
   		url('../fonts/GillSans-SemiBold.woff') format('woff'),
   		url('../fonts/GillSans-SemiBold.ttf')  format('truetype'),
@@ -20,6 +22,7 @@
 }
 @font-face {
   font-family: 'GillSans-Light';
+  src:  url('../fonts/GillSans-Light.eot');
   src:  url('../fonts/GillSans-Light.eot?#iefix') format('embedded-opentype'),
   		url('../fonts/GillSans-Light.woff') format('woff'),
   		url('../fonts/GillSans-Light.ttf')  format('truetype'),
@@ -29,6 +32,7 @@
 }
 @font-face {
   font-family: 'TrebuchetMS-Bold';
+  src:  url('../fonts/TrebuchetMS-Bold.eot');
   src:  url('../fonts/TrebuchetMS-Bold.eot?#iefix') format('embedded-opentype'),
   		url('../fonts/TrebuchetMS-Bold.woff') format('woff'),
   		url('../fonts/TrebuchetMS-Bold.ttf')  format('truetype'),
