--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -4,7 +4,7 @@
 	min-width: $minWrapperWidth;
 	margin-top: -$footerHeight;
 	height: $footerHeight;
-	background: #de5b4e;
+	background: #ea695d;
 	box-sizing: border-box;
 	padding-top: 20px;
 	font-family: $fontTreb;
