--- a/app/templates/layouts/main_layout.jade
+++ b/app/templates/layouts/main_layout.jade
@@ -7,7 +7,9 @@ html(lang='ru-RU')
 		.main-content
 			.main-content__wrapper
 				include ../common/header.jade
-				block content
+				.content
+					.wrapp
+						block content
 
 
 		include ../common/footer.jade
