--- a/app/css/all/pages.css
+++ b/app/css/all/pages.css
@@ -1,12 +1,15 @@
 .content {
   position: relative; }
   .content__img {
-    max-width: 738px;
     position: absolute;
-    bottom: -180px;
+    bottom: -166px;
     z-index: 1;
     left: 50%;
-    margin-left: -396px; }
+    margin-left: -370px;
+    overflow: hidden;
+    width: 690px; }
+  .content__img_block {
+    max-width: 738px; }
 
 .h1 {
   text-align: center;
@@ -49,20 +52,39 @@
   float: right;
   width: 245px; }
 
+.column_one {
+  width: 540px;
+  float: left; }
+
 .text-info {
   margin-bottom: 25px;
   position: relative;
   z-index: 2; }
+  .text-info_margin {
+    margin-bottom: 50px; }
   .text-info__title {
     font-family: "GillSans-SemiBold";
     margin-bottom: 15px; }
+    .text-info__title_big {
+      font-size: 20px;
+      line-height: 23px;
+      margin-bottom: 20px; }
+  .text-info__list {
+    max-width: 440px; }
+  .text-info__li {
+    margin-bottom: 15px;
+    font-size: 18px;
+    line-height: 19px; }
   .text-info__text {
     margin-bottom: 15px; }
     .text-info__text_min {
-      width: 190px;
-      margin-top: -70px; }
+      width: 195px;
+      margin-top: -60px; }
+    .text-info__text_big {
+      font-size: 18px;
+      line-height: 19px; }
   .text-info__img {
-    margin-left: -91px; }
+    margin-left: -57px; }
   .text-info__link {
     color: #008de5;
     display: inline-block;
@@ -71,10 +93,29 @@
     .text-info__link:hover {
       border-bottom: 1px solid transparent; }
 
+.img_tech {
+  float: left;
+  width: 460px;
+  margin-left: 10px; }
+
 @media screen and (max-width: 1255px) {
   .content__img {
-    max-width: 515px;
-    bottom: 25px;
-    margin-left: -276px; }
+    bottom: 89px;
+    margin-left: -265px; }
+  .content__img_block {
+    max-width: 540px; }
   .wrapp {
-    padding: 0 5px; } }
+    padding: 0 15px;
+    max-width: 1044px; }
+  .column_left {
+    width: 230px; }
+  .column_right {
+    width: 225px; } }
+
+@media screen and (max-width: 1170px) {
+  .column_one {
+    width: 540px; } }
+
+@media screen and (max-width: 1080px) {
+  .column_one {
+    width: 475px; } }
