--- a/app/css/main.css
+++ b/app/css/main.css
@@ -69,7 +69,7 @@ body {
   min-height: 100%;
   box-sizing: border-box;
   background: #f7f6ed;
-  min-width: 990px;
+  min-width: 1000px;
   overflow: hidden;
 }
 
@@ -80,7 +80,7 @@ body {
 
 .wrapp {
   max-width: 1250px;
-  min-width: 990px;
+  min-width: 1000px;
   margin: 0 auto;
   padding: 0 15px;
   position: relative;
@@ -107,6 +107,7 @@ body {
 
 @font-face {
   font-family: 'TrebuchetMS';
+  src: url("../fonts/TrebuchetMS.eot");
   src: url("../fonts/TrebuchetMS.eot?#iefix") format("embedded-opentype"), url("../fonts/TrebuchetMS.woff") format("woff"), url("../fonts/TrebuchetMS.ttf") format("truetype"), url("../fonts/TrebuchetMS.svg#TrebuchetMS") format("svg");
   font-weight: normal;
   font-style: normal;
@@ -114,6 +115,7 @@ body {
 
 @font-face {
   font-family: 'GillSans-SemiBold';
+  src: url("../fonts/GillSans-SemiBold.eot");
   src: url("../fonts/GillSans-SemiBold.eot?#iefix") format("embedded-opentype"), url("../fonts/GillSans-SemiBold.woff") format("woff"), url("../fonts/GillSans-SemiBold.ttf") format("truetype"), url("../fonts/GillSans-SemiBold.svg#GillSans-SemiBold") format("svg");
   font-weight: normal;
   font-style: normal;
@@ -121,6 +123,7 @@ body {
 
 @font-face {
   font-family: 'GillSans-Light';
+  src: url("../fonts/GillSans-Light.eot");
   src: url("../fonts/GillSans-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/GillSans-Light.woff") format("woff"), url("../fonts/GillSans-Light.ttf") format("truetype"), url("../fonts/GillSans-Light.svg#GillSans-Light") format("svg");
   font-weight: normal;
   font-style: normal;
@@ -128,6 +131,7 @@ body {
 
 @font-face {
   font-family: 'TrebuchetMS-Bold';
+  src: url("../fonts/TrebuchetMS-Bold.eot");
   src: url("../fonts/TrebuchetMS-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/TrebuchetMS-Bold.woff") format("woff"), url("../fonts/TrebuchetMS-Bold.ttf") format("truetype"), url("../fonts/TrebuchetMS-Bold.svg#TrebuchetMS-Bold") format("svg");
   font-weight: normal;
   font-style: normal;
@@ -135,10 +139,10 @@ body {
 
 /* fonts end */
 .footer {
-  min-width: 990px;
+  min-width: 1000px;
   margin-top: -59px;
   height: 59px;
-  background: #de5b4e;
+  background: #ea695d;
   box-sizing: border-box;
   padding-top: 20px;
   font-family: "TrebuchetMS";
@@ -192,7 +196,6 @@ body {
 }
 
 .menu {
-  color: #008ee5;
   display: inline-block;
   vertical-align: top;
   margin-top: 15px;
@@ -205,6 +208,7 @@ body {
 }
 
 .menu__link {
+  color: #008ee5;
   font-family: "TrebuchetMS";
   font-size: 18px;
   line-height: 21px;
@@ -214,19 +218,36 @@ body {
 }
 
 .menu__link:hover {
+  color: #de5b4e;
+  border-bottom: 1px solid #de5b4e;
+}
+
+.menu__link_active {
+  color: #de5b4e;
   border-bottom: 1px solid transparent;
 }
+
+.menu__link_active:hover {
+  border-bottom: 1px solid transparent;
+}
+
+
 .content {
   position: relative;
 }
 
 .content__img {
-  max-width: 738px;
   position: absolute;
-  bottom: -180px;
+  bottom: -166px;
   z-index: 1;
   left: 50%;
-  margin-left: -396px;
+  margin-left: -370px;
+  overflow: hidden;
+  width: 690px;
+}
+
+.content__img_block {
+  max-width: 738px;
 }
 
 .h1 {
@@ -284,10 +305,19 @@ body {
   width: 245px;
 }
 
+.column_one {
+  width: 540px;
+  float: left;
+}
+
 .text-info {
   margin-bottom: 25px;
   position: relative;
   z-index: 2;
+}
+
+.text-info_margin {
+  margin-bottom: 50px;
 }
 
 .text-info__title {
@@ -295,17 +325,38 @@ body {
   margin-bottom: 15px;
 }
 
+.text-info__title_big {
+  font-size: 20px;
+  line-height: 23px;
+  margin-bottom: 20px;
+}
+
+.text-info__list {
+  max-width: 440px;
+}
+
+.text-info__li {
+  margin-bottom: 15px;
+  font-size: 18px;
+  line-height: 19px;
+}
+
 .text-info__text {
   margin-bottom: 15px;
 }
 
 .text-info__text_min {
-  width: 190px;
-  margin-top: -70px;
+  width: 195px;
+  margin-top: -60px;
+}
+
+.text-info__text_big {
+  font-size: 18px;
+  line-height: 19px;
 }
 
 .text-info__img {
-  margin-left: -91px;
+  margin-left: -57px;
 }
 
 .text-info__link {
@@ -319,15 +370,44 @@ body {
   border-bottom: 1px solid transparent;
 }
 
+.img_tech {
+  float: left;
+  width: 460px;
+  margin-left: 10px;
+}
+
 @media screen and (max-width: 1255px) {
   .content__img {
-    max-width: 515px;
-    bottom: 25px;
-    margin-left: -276px;
+    bottom: 89px;
+    margin-left: -265px;
+  }
+
+  .content__img_block {
+    max-width: 540px;
   }
 
   .wrapp {
-    padding: 0 5px;
+    padding: 0 15px;
+    max-width: 1044px;
+  }
+
+  .column_left {
+    width: 230px;
+  }
+
+  .column_right {
+    width: 225px;
   }
 }
 
+@media screen and (max-width: 1170px) {
+  .column_one {
+    width: 540px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .column_one {
+    width: 475px;
+  }
+}
