--- a/app/scss/pages.scss
+++ b/app/scss/pages.scss
@@ -1,16 +1,20 @@
 @import "mixins";
 .content {
 	position: relative;
-
 	&__img {
+		position: absolute;
+		bottom: -166px;
+		z-index: 1;
+		left: 50%;
+		margin-left: -370px;
+		overflow: hidden;
+		width: 690px;
+	}
+	&__img_block {
 		//background: url(../img/bg1.png) 0 0 no-repeat;
 		max-width: 738px;
 		// height: 743px;
-		position: absolute;
-		bottom: -180px;
-		z-index: 1;
-		left: 50%;
-		margin-left: -396px;
+
 
 	}
 }
@@ -63,27 +67,51 @@
 	float: right;
 	width: 245px;
 }
+.column_one {
+	width: 540px;
+	float: left;
+}
 .text-info {
 	margin-bottom: 25px;
 	position: relative;
 	z-index: 2;
-
+	&_margin {
+		margin-bottom: 50px;
+	}
 	&__title {
 		font-family: $fontBold;
 		margin-bottom: 15px;
+
+		&_big {
+			font-size: 20px;
+			line-height: 23px;
+			margin-bottom: 20px;
+		}
+	}
+	&__list {
+		max-width: 440px;
+	}
+	&__li {
+		margin-bottom: 15px;
+		font-size: 18px;
+		line-height: 19px;
 	}
 
 	&__text {
 		margin-bottom: 15px;
 
 		&_min {
-			width: 190px;
-			margin-top: -70px;
+			width: 195px;
+			margin-top: -60px;
+		}
+		&_big {
+			font-size: 18px;
+			line-height: 19px;
 		}
 	}
 
 	&__img {
-		margin-left: -91px;
+		margin-left: -57px;
 	}
 
 	&__link {
@@ -96,13 +124,38 @@
 		}
 	}
 }
+.img_tech {
+	float: left;
+	width: 460px;
+	margin-left: 10px;
+}
 @media screen and (max-width:1255px) {
 	.content__img {
-		max-width: 515px;
-		bottom: 25px;
-		margin-left: -276px;
+		bottom: 89px;
+		margin-left: -265px;
+	}
+	.content__img_block {
+		max-width: 540px;
+
 	}
 	.wrapp {
-		padding: 0 5px;
+		padding: 0 15px;
+		max-width: 1044px;
+	}
+	.column_left {
+		width: 230px;
+	}
+	.column_right {
+		width: 225px;
+	}
+}
+@media screen and (max-width:1170px) {
+	.column_one {
+		width: 540px;
+	}
+}
+@media screen and (max-width:1080px) {
+	.column_one {
+		width: 475px;
 	}
 }
